--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "@angular/forms": "~8.1.2",
     "@angular/platform-browser": "~8.1.2",
     "@angular/platform-browser-dynamic": "~8.1.2",
-    "@angular/router": "~8.1.2",
+    "@angular/router": "^8.1.3",
     "bootstrap": "^3.3.7",
+    "firebase": "^6.3.3",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
